evaluation/test_suite/positive/ub85/1.c
#include <stdio.h>

static int f(void);

int f(void)
{
}

int main()
{
    printf("%d\n", f());
}
